--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,68 +1,69 @@
 * {
-  margin: 0px;
-  /* height: 0px;
+    margin: 0px;
+    /* height: 0px;
     width: 0px; */
-  padding: 0px;
+    padding: 0px;
 }
 
 .breadcrumb {
-  margin-bottom: 10px;
-  justify-content: left;
-  display: flex;
-  margin-left: 89px;
-  margin-top: -3px;
+    margin-bottom: 10px;
+    justify-content: left;
+    display: flex;
+    margin-left: 89px;
+    margin-top: -3px;
 }
 
 .breadcrumb-section {
-  color: #5ab6ad;
+    color: #5ab6ad;
 }
 
 .navbar {
-  height: 60px;
-  width: 100%;
-  display: flex;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 10px;
-  /* background-color: black; */
+    height: 60px;
+    width: 100%;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 10px;
+    /* background-color: black; */
 }
 
 .navbar .navbar-logo P {
-  margin-top: 5px;
-  margin-left: 7px;
-  font-size: 30px;
-  font-weight: bold;
+    margin-top: 5px;
+    margin-left: 7px;
+    font-size: 30px;
+    font-weight: bold;
 }
+
 .navbar .navbar-leftside {
-  flex: 50%;
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  max-height: 50px;
-  margin-left: 15px;
+    flex: 50%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    max-height: 50px;
+    margin-left: 15px;
 }
 
 .navbar .navbar-leftside .links {
-  max-height: 50px;
+    max-height: 50px;
 }
 
 .navbar .navbar-leftside .links a {
-  text-decoration: none;
-  font-size: 20px;
-  color: black;
-  margin-left: 15px;
+    text-decoration: none;
+    font-size: 17px;
+    color: black;
+    margin-left: 20px;
 }
 
-.navbar .navbar-leftside .links a:hover{
-  color: black;
-  text-decoration: underline;
+.navbar .navbar-leftside .links a:hover {
+    color: black;
+    text-decoration: underline;
 }
-
 
 a:active {
-  /* color: black; */
-  text-decoration: underline;
+    /* color: black; */
+    text-decoration: underline;
 }
+
 
 /* .home,
 .products,
@@ -73,150 +74,147 @@ a:active {
 } */
 
 .navbar .navbar-leftside button i {
-  display: none;
-  /* height: 25px; */
+    display: none;
+    /* height: 25px; */
 }
 
 .navbar .navbar-leftside #hidden {
-  display: flex;
+    display: flex;
 }
 
 .navbar .navbar-rightside {
-  flex: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  color: black;
-  max-height: 50px;
-  margin-right: 15px;
+    flex: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    color: black;
+    max-height: 50px;
+    margin-right: 15px;
 }
 
 .navbar .navbar-rightside a:hover {
-  box-shadow: 1px 1px 2px beige;
-  /* text-decoration: underline */
+    box-shadow: 1px 1px 2px beige;
+    /* text-decoration: underline */
 }
 
 .navbar .navbar-rightside a {
-  text-decoration: none;
-  font-size: 20px;
-  margin-left: 10px;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 10px;
-  /* text-decoration: azure;
+    text-decoration: none;
+    font-size: 20px;
+    margin-left: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    /* text-decoration: azure;
    */
-  color: white;
-  padding: 0px 10px;
-  padding-bottom: 5px;
-  background-color: rgb(0, 0, 0);
-  /* height: 25px; */
-  /* border: solid; */
+    color: white;
+    padding: 0px 10px;
+    padding-bottom: 5px;
+    background-color: rgb(0, 0, 0);
+    /* height: 25px; */
+    /* border: solid; */
 }
 
 .navbar-rightside input {
-  width: 200px;
-  height: 25px;
-  border: solid;
-  border-width: 1px;
-  border-radius: 4px;
-  border-color: black;
-  font-size: 15px;
-  padding-left: 6px;
-  color: black;
-  font-weight: 400;
+    width: 200px;
+    height: 25px;
+    border: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    border-color: black;
+    font-size: 15px;
+    padding-left: 6px;
+    color: black;
+    font-weight: 400;
 }
 
 .navbar-rightside button {
-  height: 25px;
-  width: 25px;
-  color: black;
-  background-color: white;
-  border: solid;
-  border-width: 1px;
-  border-color: black;
-  align-items: center;
-  padding-left: 3px;
-  border-radius: 4px;
+    height: 25px;
+    width: 50px;
+    color: white;
+    background-color: black;
+    border: solid;
+    border-width: 1px;
+    border-color: black;
+    align-items: center;
+    padding: 0px 10px;
+    border-radius: 4px;
 }
 
 .navbar-rightside button:hover {
-  cursor: pointer;
-  box-shadow: 1px 1px 2px #8eb1b0;
+    cursor: pointer;
+    box-shadow: 1px 1px 2px #8eb1b0;
 }
 
 input:hover {
-  /* cursor:pointer; */
-  box-shadow: 1px 1px 2px #8eb1b0;
+    /* cursor:pointer; */
+    box-shadow: 1px 1px 2px #8eb1b0;
 }
 
 @media screen and (max-width: 850px) {
-  .navbar .navbar-leftside .links a {
-    font-size: 17px;
-  }
-  .navbar .navbar-rightside a {
-    font-size: 17px;
-  }
+    .navbar .navbar-leftside .links a {
+        font-size: 15px;
+    }
+    .navbar .navbar-rightside a {
+        font-size: 15px;
+    }
 }
 
 @media screen and (max-width: 750px) {
-  .navbar .navbar-leftside .links a {
-    font-size: 15px;
-  }
-  .navbar .navbar-rightside a {
-    font-size: 15px;
-  }
+    .navbar .navbar-leftside .links a {
+        font-size: 13px;
+    }
+    .navbar .navbar-rightside a {
+        font-size: 13px;
+    }
 }
 
 @media screen and (max-width: 650px) {
-  .navbar .navbar-leftside button i {
-    display: flex;
-  }
-
-  .navbar .navbar-leftside .links {
-    display: none;
-  }
-  .navbar .navbar-rightside a {
-    display: none;
-  }
-
-  .navbar .navbar-leftside #hidden {
-    position: absolute;
-    left: 0px;
-    top: 60px;
-    height: 155px;
-    max-height: 155px;
-    width: 100%;
-    background-color: #000000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .navbar .navbar-leftside #hidden a {
-    color: rgb(255, 255, 255);
-    margin-top: 10px;
-    font-size: 17px;
-    /* border: solid; */
-  }
-  .navbar .navbar-leftside #hidden a:hover {
-    /* text-decoration: underline; */
-    border-bottom: solid 1px;
-  }
+    .navbar .navbar-leftside button i {
+        display: flex;
+    }
+    .navbar .navbar-leftside .links {
+        display: none;
+    }
+    .navbar .navbar-rightside a {
+        display: none;
+    }
+    .navbar .navbar-leftside #hidden {
+        position: absolute;
+        left: 0px;
+        top: 60px;
+        height: 155px;
+        max-height: 155px;
+        width: 100%;
+        background-color: #000000;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .navbar .navbar-leftside #hidden a {
+        color: rgb(255, 255, 255);
+        margin-top: 10px;
+        font-size: 17px;
+        /* border: solid; */
+    }
+    .navbar .navbar-leftside #hidden a:hover {
+        /* text-decoration: underline; */
+        border-bottom: solid 1px;
+    }
 }
 
 @media screen and (max-width: 500px) {
-  .navbar .navbar-logo img {
-    height: 40px;
-    width: 40px;
-    margin-top: 10px;
-  }
+    .navbar .navbar-logo img {
+        height: 40px;
+        width: 40px;
+        margin-top: 10px;
+    }
 }
 
 @media screen and (max-width: 400px) {
-  .navbar .navbar-logo img {
-    height: 30px;
-    width: 30px;
-    margin-top: 15px;
-    margin-right: 15px;
-  }
+    .navbar .navbar-logo img {
+        height: 30px;
+        width: 30px;
+        margin-top: 15px;
+        margin-right: 15px;
+    }
 }
