--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,239 +1,310 @@
 * {
-    margin: 0px;
-    /* height: 0px;
+  margin: 0px;
+  /* height: 0px;
     width: 0px; */
-    padding: 0px;
+  padding: 0px;
 }
 
 .navbar {
-    height: 60px;
-    width: 100%;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-bottom: 10px;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 10px;
 }
 
-.navbar .navbar-logo P {
-    margin-top: 5px;
-    margin-left: 7px;
-    font-size: 30px;
-    font-weight: bold;
+.navbar .navbar-logo a {
+  margin-top: 5px;
+  display: flex;
+  margin-left: 7px;
+  font-size: 30px;
+  font-weight: bold;
+  align-content: center;
+}
+
+.navbar .navbar-logo a:hover {
+  color: black;
+  text-decoration: none;
 }
 
 .navbar .navbar-leftside {
-    flex: 50%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    max-height: 50px;
-    margin-left: 15px;
+  flex: 60%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  max-height: 50px;
+  margin-left: 15px;
 }
 
 .navbar .navbar-leftside .links {
-    max-height: 50px;
+  max-height: 50px;
+}
+
+.navbar .navbar-leftside .links .active{
+  text-decoration: underline;
+  text-decoration-style: solid ;
+  text-decoration-thickness: 2px;
+
 }
 
 .navbar .navbar-leftside .links a {
-    text-decoration: none;
-    font-size: 17px;
-    color: black;
-    margin-left: 20px;
+  text-decoration: none;
+  font-size: 17px;
+  color: black;
+  margin-left: 20px;
 }
 
 .navbar .navbar-leftside .links a:hover {
-    color: black;
-    text-decoration: underline;
+  color: black;
+  text-decoration: underline;
 }
 
 a:active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .navbar .navbar-leftside button i {
-    display: none;
+  display: none;
 }
 
 .navbar .navbar-leftside #hidden {
-    display: flex;
+  display: flex;
 }
 
 .navbar .navbar-rightside {
-    flex: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    color: black;
-    max-height: 50px;
-    margin-right: 25px;
+  flex: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: black;
+  max-height: 50px;
+  margin-right: 25px;
 }
 
 .navbar .navbar-rightside a:hover {
-    box-shadow: 1px 1px 2px beige;
+  box-shadow: 1px 1px 2px beige;
 }
 
 .navbar .navbar-rightside a {
-    text-decoration: none;
-    font-size: 20px;
-    margin-left: 10px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 10px;
-    color: white;
-    padding: 0px 10px;
-    padding-bottom: 5px;
-    background-color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 20px;
+  margin-left: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
+  color: white;
+  padding: 0px 10px;
+  padding-bottom: 5px;
+  background-color: rgb(0, 0, 0);
 }
 
 .navbar-rightside input {
-    width: 200px;
-    height: 30px;
-    border: solid;
-    border-width: 1px;
-    border-radius: 4px;
-    border-color: black;
-    font-size: 15px;
-    padding-left: 6px;
-    color: black;
-    font-weight: 400;
+  width: 200px;
+  height: 30px;
+  border: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: black;
+  font-size: 15px;
+  padding-left: 6px;
+  color: black;
+  font-weight: 400;
 }
 
 .navbar-rightside button {
-    height: 30px;
-    width: 50px;
-    color: white;
-    background-color: black;
-    border: solid;
-    border-width: 1px;
-    border-color: black;
-    align-items: center;
-    /* padding: 0px 10px; */
-    border-radius: 4px;
-    margin-right: 10px;
+  height: 30px;
+  width: 50px;
+  color: white;
+  background-color: black;
+  border: solid;
+  border-width: 1px;
+  border-color: black;
+  align-items: center;
+  /* padding: 0px 10px; */
+  border-radius: 4px;
+  margin-right: 10px;
 }
 
 .navbar-rightside {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
 .navbar-rightside button:hover {
-    cursor: pointer;
-    box-shadow: 1px 1px 2px #8eb1b0;
+  cursor: pointer;
+  box-shadow: 1px 1px 2px #8eb1b0;
 }
 
 input:hover {
-    box-shadow: 1px 1px 2px #8eb1b0;
+  box-shadow: 1px 1px 2px #8eb1b0;
 }
 
 @media screen and (max-width: 850px) {
-    .navbar .navbar-leftside .links a {
-        font-size: 15px;
-    }
-    .navbar .navbar-rightside a {
-        font-size: 15px;
-    }
+  .navbar .navbar-leftside .links a {
+    font-size: 15px;
+  }
+  .navbar .navbar-rightside a {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .navbar .navbar-leftside .links a {
+    margin-left: 15px;
+  }
+  .navbar-rightside input {
+    width: 150px;
+  }
+  .navbar-rightside button {
+    width: 30px;
+  }
 }
 
 @media screen and (max-width: 750px) {
-    .navbar .navbar-leftside .links a {
-        font-size: 13px;
-    }
-    .navbar .navbar-rightside a {
-        font-size: 13px;
-    }
+  .navbar .navbar-logo a {
+    font-size: 27px;
+  }
+  .navbar .navbar-leftside .links a {
+    font-size: 14px;
+    margin-left: 12px;
+  }
+  .navbar .navbar-rightside a {
+    font-size: 13px;
+  }
+  .navbar-rightside input {
+    width: 150px;
+    height: 27px;
+  }
+  .navbar-rightside button {
+    width: 40px;
+    height: 27px;
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .navbar .navbar-leftside button i {
-        display: flex;
-    }
-    .navbar .navbar-leftside .links {
-        display: none;
-    }
-    .navbar .navbar-rightside a {
-        display: none;
-    }
-    .navbar .navbar-leftside #hidden {
-        z-index: 1;
-        position: absolute;
-        left: 0px;
-        top: 60px;
-        height: 155px;
-        max-height: 155px;
-        width: 100%;
-        background-color: #000000;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .navbar .navbar-leftside #hidden a {
-        color: rgb(255, 255, 255);
-        margin-top: 10px;
-        font-size: 17px;
-    }
-    .navbar .navbar-leftside #hidden a:hover {
-        border-bottom: solid 1px;
-    }
-    .navbar-rightside input {
-        width: 150px;
-    }
-    .navbar-rightside button {
-        width: 40px;
-    }
+  .navbar .navbar-leftside button i {
+    display: flex;
+  }
+  .navbar .navbar-leftside .links {
+    display: none;
+  }
+  .navbar .navbar-rightside a {
+    display: none;
+  }
+  .navbar .navbar-leftside #hidden {
+    z-index: 99;
+    position: absolute;
+    left: 0px;
+    top: 60px;
+    height: 165px;
+    max-height: 165px;
+    width: 100%;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar .navbar-leftside #hidden a {
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+    font-size: 17px;
+  }
+  .navbar .navbar-leftside #hidden a:hover {
+    border-bottom: solid 1px;
+  }
+
+  .navbar .navbar-rightside {
+    flex: 60%;
+  }
+  .navbar-rightside input {
+    height: 25px;
+    width: 150px;
+  }
+  .navbar-rightside button {
+    height: 25px;
+    width: 40px;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    .navbar-rightside input {
-        width: 130px;
-    }
-    .navbar-rightside button {
-        width: 30px;
-    }
+  .navbar-rightside input {
+    width: 130px;
+    height: 25px;
+  }
+  .navbar-rightside button {
+    height: 25px;
+    width: 30px;
+  }
+  .navbar .navbar-rightside {
+    flex: 60%;
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .navbar .navbar-logo img {
-        height: 40px;
-        width: 40px;
-        margin-top: 10px;
-    }
-    .navbar-rightside input {
-        width: 120px;
-    }
-    .navbar-rightside button {
-        width: 30px;
-    }
+  .navbar .navbar-logo img {
+    height: 40px;
+    width: 40px;
+    margin-top: 10px;
+  }
+  .navbar-rightside input {
+    height: 25px;
+    width: 120px;
+  }
+  .navbar-rightside button {
+    height: 25px;
+    width: 30px;
+  }
+  .navbar .navbar-rightside {
+    flex: 60%;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    .navbar-rightside input {
-        width: 100px;
-    }
-    .navbar-rightside button {
-        width: 28px;
-    }
+  .navbar-rightside input {
+    height: 25px;
+    width: 100px;
+  }
+  .navbar-rightside button {
+    height: 25px;
+    width: 28px;
+  }
+
+  .navbar .navbar-rightside {
+    flex: 60%;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .navbar .navbar-logo img {
-        height: 30px;
-        width: 30px;
-        margin-top: 15px;
-        margin-right: 15px;
-    }
-    .navbar-rightside input {
-        width: 80px;
-    }
-    .navbar-rightside button {
-        width: 25px;
-    }
+  .navbar .navbar-logo img {
+    height: 30px;
+    width: 30px;
+    margin-top: 15px;
+    margin-right: 15px;
+  }
+  .navbar-rightside input {
+    height: 25px;
+    width: 80px;
+  }
+  .navbar-rightside button {
+    width: 25px;
+  }
+
+  .navbar .navbar-rightside {
+    flex: 60%;
+  }
 }
 
 @media screen and (max-width: 350px) {
-    .navbar-rightside input {
-        width: 70px;
-    }
-    .navbar-rightside button {
-        width: 20px;
-    }
+  .navbar-rightside input {
+    width: 70px;
+    border-color: black;
+  }
+  .navbar-rightside button {
+    width: 20px;
+    display: none;
+  }
+
+  .navbar .navbar-rightside {
+    flex: 60%;
+  }
 }
