--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -41,11 +41,10 @@
   max-height: 50px;
 }
 
-.navbar .navbar-leftside .links .active{
+.navbar .navbar-leftside .links .active {
   text-decoration: underline;
-  text-decoration-style: solid ;
+  text-decoration-style: solid;
   text-decoration-thickness: 2px;
-
 }
 
 .navbar .navbar-leftside .links a {
@@ -99,6 +98,17 @@ a:active {
   background-color: rgb(0, 0, 0);
 }
 
+.navbar .navbar-rightside a.span {
+  font-size: 0.8rem;
+  position: absolute;
+  right: 65.5rem;
+  width: 15px;
+  height: 15px;
+  background-color: darkgray;
+  color: #000;
+  border-radius: 50%;
+}
+
 .navbar-rightside input {
   width: 200px;
   height: 30px;
@@ -124,6 +134,11 @@ a:active {
   /* padding: 0px 10px; */
   border-radius: 4px;
   margin-right: 10px;
+}
+
+.navbar .navbar-rightside-icon i {
+  height: 30px;
+  font-size: 22px;
 }
 
 .navbar-rightside {
@@ -308,3 +323,13 @@ input:hover {
     flex: 60%;
   }
 }
+
+/* font-size: 0.8rem;
+position: absolute;
+/* top: -6px; */
+/* right: 65.5rem;
+width: 15px;
+height: 15px;
+background-color: darkgray;
+color: #000;
+border-radius: 50%; */
